@@ -1,6 +1,8 @@
 Camlp5 Version 5.16:
 --------------------
 
+* [25 Aug 10] Added option -no-opt in configure, not to use .opt versions
+  of OCaml compilers.
 * [20 Aug 10] Added compatibility for OCaml version 3.11.3.
 * [18 Aug 10] Added function "get" in library module "Ploc", and a
   statement "lprintf" similar to "pprintf" added by the syntax
